--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ happy to see
 
 suresh
 
-<<<<<<< HEAD
 born again
 
 
-=======
 london
->>>>>>> d8480328decb4f05fb7f90d4d5ef7998f9a59a57
+
+
+zero
 </body>
 </html>
