--- a/index.html
+++ b/index.html
@@ -12,35 +12,23 @@
 
 
 hai welcome
-
 happy to see
-  
   <p>12345</p>
   <p>678910</p>
   <p>11 12 13 14 15</p>
   <p>16 17 18 19 20</p>
-
 suresh
-
 born again
-
-
 london
-
-
 zero
-
 <p>london</p>
-
 city 
-
 america newyork
-
 <p>successfully deployed from github</p>
 <p>superb suresh</p>
-
 <marquee>welcome to pudukkottai</marquee>
 
+<h3>lines are rearranged</h3>
 
 </body>
 </html>
